--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
+    "build": "cd android && ./gradlew assembleRelease && cd ..",
     "lint": "eslint ."
   },
   "dependencies": {
