--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@rnmapbox/maps": "rnmapbox/maps#main",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-confirmation-code-field": "6",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-picker": "^4.10.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-mask-input": "^1.2.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-shadow-2": "^7.0.6",
-    "react-native-svg": "^13.4.0"
+    "react-native-svg": "^13.4.0",
+    "react-native-yamap": "^4.1.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
