--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@rnmapbox/maps": "rnmapbox/maps#main",
+    "axios": "0.26.0",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-confirmation-code-field": "6",
@@ -21,11 +23,11 @@
     "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-mask-input": "^1.2.2",
+    "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-shadow-2": "^7.0.6",
-    "react-native-svg": "^13.4.0",
-    "react-native-yamap": "^4.1.14"
+    "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
