--- a/mobiile/package.json
+++ b/mobiile/package.json
@@ -11,16 +11,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/checkbox": "^0.5.13",
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "@rnmapbox/maps": "rnmapbox/maps#main",
     "axios": "0.26.0",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-confirmation-code-field": "6",
+    "react-native-device-info": "^10.3.0",
+    "react-native-dropdown-picker": "^5.4.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
@@ -29,7 +34,10 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-shadow-2": "^7.0.6",
-    "react-native-svg": "^13.4.0"
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.4.0",
+    "react-redux": "^8.0.5",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
